[tool.poetry]
name = "pokebattle"
version = "0.1.0"
description = "pokemon battle simulation using pokeapi data"
authors = ["Gabriele Mastrapasqua <gabriele.mastrapasqua@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.1"
requests = "^2.31.0"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"
requests-mock = "^1.9.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "pokebattle.main:main"